[package]
name = "tsz_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
log = { version = "*", features = ["std"] }
tower-lsp = "*"
pollster = "*"
linked-hash-map = "*"
handlebars = "4.3.6"
colored = "2.0.0"

proc-macro2 = { version = "*", features = ["span-locations"] }
quote = "*"
syn = { version = "*", features = ["full", "derive"] }
tracing = "0.1.37"
regex = "1.8.4"
lazy_static = "1.4.0"
